--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,10 @@ body {
 }
 
 #faf_logo {
+    position: relative;
     width: 90%;
     margin: 20px;
+    animation: change 6s ease-in-out 0s infinite;
 }
 
 #message {
@@ -25,7 +27,7 @@ body {
 
 #f_icon {
     width: 50px;
-    margin: 20px 5px;
+    margin: 0 5px;
 }
 
 #facebook-link {
@@ -37,6 +39,48 @@ a {
     color: #FFFFFF;
     display: flex;
     flex-flow: row;
-    height: 100px;
+    height: 50px;
+    margin: 25px;
     align-items: center;
+}
+
+a {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) 0s infinite;
+    transform: translate3d(0, 0, 0);
+  }
+  
+@keyframes shake {
+    10%, 90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+
+    20%, 80% {
+        transform: translate3d(1px, 0, 0);
+    }
+
+    30%, 50%, 70% {
+        transform: translate3d(-1px, 1px, 0);
+    }
+
+    40%, 60% {
+        transform: translate3d(1px, 0, -1px);
+    }
+}
+
+@keyframes change {
+    0% {
+        transform: rotateY(0);
+    }
+    30% {
+        transform: rotateY(180deg);
+    }
+    50% {
+        transform: rotateY(180deg);
+    }
+    80% {
+        transform: rotateY(360deg);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
 }
